<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="#EDF4FF"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:text="@string/daftar_sekarang"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextTextEmailAddress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email123"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:paddingTop="25sp"/>

    <EditText
        android:id="@+id/editTextTextPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password123"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:paddingTop="25sp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_daftar"
        android:text="@string/daftar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#EDF4FF"
        android:backgroundTint="#2FC3FF"
        android:layout_marginTop="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/punyaAkun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_memiliki_akun"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/masukNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk2"
            android:textColor="#2FC3FF"
            android:textSize="12sp"
            android:paddingLeft="2dp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>